feat: new AccountSettings module

--- a/PocketBudget/Localizable.strings
+++ b/PocketBudget/Localizable.strings
@@ -6,6 +6,10 @@
   Copyright © 2020 jtouzy. All rights reserved.
 */
 
+// APP_MODULE: ACCOUNT_SETTINGS
+"account_settings_required_expenses_title" = "Dépenses obligatoires";
+"account_settings_required_expenses_description" = "Gérez ici les dépenses obligatoires pour votre compte.";
+
 // APP_MODULE: EXPENSES_EDITOR
 "expenses_editor_add_action" = "Ajouter une dépense";
 
