--- a/PocketBudget/Localizable.strings
+++ b/PocketBudget/Localizable.strings
@@ -6,6 +6,9 @@
   Copyright © 2020 jtouzy. All rights reserved.
 */
 
+// APP_MODULE: ACCOUNTS_EDITOR
+"accounts_editor_title" = "Gérez vos comptes";
+
 // APP_MODULE: ACCOUNT_SETTINGS
 "account_settings_required_expenses_title" = "Dépenses obligatoires";
 "account_settings_required_expenses_description" = "Gérez ici les dépenses obligatoires pour votre compte.";
